Fixed a lot of issues with ArrayList